unpackaged/main/default/objects/ccpe_ocp__Cloudcoach_Project1__c/ccpe_ocp__Cloudcoach_Project1__c.object-meta.xml
<CustomObject>
    <label>Cloud Coach Project</label>
    <nameField>
        <displayFormat>CCP-{0}</displayFormat>
        <label>Cloud Coach Project Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cloud Coach Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>