unpackaged/main/default/objects/ccpe_ocp__Cloudcoach_Project1__c/fields/ccpe_ocp__Account__c.field-meta.xml
<CustomField>
    <fullName>ccpe_ocp__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cloud Coach Projects</relationshipLabel>
    <relationshipName>Cloud_Coach_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>