unpackaged/main/default/objects/ccpe_ocp__Cloudcoach_Project1__c/fields/ccpe_ocp__Project__c.field-meta.xml
<CustomField>
    <fullName>ccpe_ocp__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>project_cloud__Project__c</referenceTo>
    <relationshipLabel>Cloud Coach Projects</relationshipLabel>
    <relationshipName>Cloud_Coach_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>