unpackaged/main/default/objects/ccpe_ocp__Cloudcoach_Project1__c/fields/ccpe_ocp__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ccpe_ocp__Start_Date__c</fullName>
    <formula>ccpe_ocp__Project__r.project_cloud__Start__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>